create vue front

--- a/index.html
+++ b/index.html
@@ -1,193 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css" />
-
     <title>The restorant</title>
-
-</head>
-<body>
-    <img 
-    src="img/logo.svg" 
-    alt="logo"
-    class="logo"
-    />
-    <nav>
-        <div id="dropdown-list">
-            <div id="choose-template">
-                <div id="text-container">
-                    Выбрать кaтегорию
-                    <img id="arrow-icon" src="img/arrow.svg">
-                </div>
-            </div>
-            <div id="list-container">
-                <ul id="templates-list" class = 'list'>
-                    <li class = 'list_item_all' data-id="all">Все</li>
-                    <li class = 'list_item' data-id="meat">Мясо</li>
-                    <li class = 'list_item' data-id="juice">Соки</li>
-                    <li class = 'list_item' data-id="cocktail">Коктели</li>
-                    <li class = 'list_item' data-id="cereal">Каши</li>
-                    <li class = 'list_item' data-id="soup">Супы</li>
-                    <li class = 'list_item' data-id="tea">Чай</li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <button id="basket" class="basket">
-        <p id="item-count">0</p>
-        <img id="basket-icon" src="img/basket.svg" alt="basket">
-    </button>
-
-    <div class = "menu">
-
-        <!-- 1 карточка -->
-        <div class="dish-card cereal" data-id = '01'>
-            <div class="dish-img"><img src="img/cereal-1.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Каша c ягодами</h3></a>
-                    <p class="price">225 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 2 карточка -->
-        <div class="dish-card cereal" data-id = '02'>
-            <div class="dish-img"><img src="img/cereal-2.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Каша с шоколадом</h3></a>
-                    <p class="price">150 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class ="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 3 карточка -->
-        <div class="dish-card cocktail" data-id = '03'>
-            <div class="dish-img"><img src="img/cocktail.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Коктель холодный Махито</h3></a>
-                    <p class="price">155 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 4 карточка -->
-        <div class="dish-card juice" data-id = '04'>
-            <div class="dish-img"><img src="img/juice.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Сок апельсиновый</h3></a>
-                    <p class="price">99 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!--5 карточка -->
-        <div class="dish-card meat" data-id = '05'>
-            <div class="dish-img"><img src="img/meat-1.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Стейк</h3></a>
-                    <p class="price">369 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 6 карточка -->
-        <div class="dish-card meat" data-id = '06'>
-            <div class="dish-img"><img src="img/meat-2.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Курица в духовке</h3></a>
-                    <p class="price">299 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!--7 карточка -->
-        <div class="dish-card soup" data-id = '07'>
-            <div class="dish-img"><img src="img/soup-1.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Суп с морепродуктами</h3></a>
-                    <p class="price">259 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 8 карточка -->
-        <div class="dish-card soup" data-id = '08'>
-            <div class="dish-img"><img src="img/soup-2.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Крем суп тыквенный</h3></a>
-                    <p class="price">259 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-        <!-- 9 карточка -->
-        <div class="dish-card tea" data-id = '09'>
-            <div class="dish-img"><img src="img/tea.png"></div>
-            <div class="dish-info">
-                <div class="main-dish-info">
-                    <a class="open-info"><h3>Чай черный</h3></a>
-                    <p class="price">99 ₽</p>
-                </div>
-            </div>
-            <button data-cart type="button" class="buy-dish">Добавить в корзину</button>
-        </div>
-
-    </div>
-
-    <div class="rectangle-bg"></div>
-
-    <div class="modal" id="my-modal">
-
-        <div class="modal_box">
-            <button id="close-modal" class="close-modal-">
-                <img id="cross-icon" src="img/cross.svg" alt="close-modal" >
-            </button>
-
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h5 class="card-title">Ваш заказ</h4>
-                        <div class="container">
-
-                        </div>
-                    <div data-cart-empty class="alert alert-secondary" role="alert">
-                        Корзина пуста
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-
-    </div>
-
-    <script src="main.js"></script>
-
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
-
-
-
